--- a/Models/train_config.json
+++ b/Models/train_config.json
@@ -1,14 +1,14 @@
 {
-    "num_heads": 1,
-    "num_encoder_layers": 1,
-    "hidden_dim": 20,
-    "sequence_length": 60,
+    "num_heads": 4,
+    "num_encoder_layers": 4,
+    "hidden_dim": 40,
+    "sequence_length": 100,
     "dropout": 0.1,
-    "batch_size": 32,
+    "batch_size": 256,
     "weight_param": 0.5,
-    "num_epochs": 3,
-    "model_save_dir": "model_output",
+    "num_epochs": 10,
+    "model_save_dir": "model1_output",
     "config_path": "../data/config.json",
-    "train_data_path": "../data/statcast_mini_cleaned.csv",
-    "valid_data_path": "../data/statcast_mini_cleaned.csv"
+    "train_data_path": "../data/statcast_2015-2023_cleaned.csv",
+    "valid_data_path": "../data/statcast_2023-2024_cleaned.csv"
 }
