--- a/Models/large_200_output/model_config.json
+++ b/Models/large_200_output/model_config.json
@@ -1,13 +1,13 @@
 {
-    "num_heads": 4,
-    "num_encoder_layers": 4,
-    "hidden_dim": 48,
+    "num_heads": 12,
+    "num_encoder_layers": 12,
+    "hidden_dim": 60,
     "sequence_length": 200,
     "dropout": 0.1,
     "batch_size": 256,
     "weight_param": 0.5,
     "num_epochs": 10,
-    "model_save_dir": "small_200_output_updated",
+    "model_save_dir": "large_200_output",
     "config_path": "../data/config.json",
     "train_data_path": "../data/statcast_2015-2023_cleaned.csv",
     "valid_data_path": "../data/statcast_2023-2024_cleaned.csv",
