--- a/Models/train_config.json
+++ b/Models/train_config.json
@@ -7,7 +7,8 @@
     "batch_size": 256,
     "weight_param": 0.5,
     "num_epochs": 10,
-    "model_save_dir": "med_200_output",
+    "learning_rate": 0.01,
+    "model_save_dir": "med_200_output_updated",
     "config_path": "../data/config.json",
     "train_data_path": "../data/statcast_2015-2023_cleaned.csv",
     "valid_data_path": "../data/statcast_2023-2024_cleaned.csv"
